Enforce the Android 8 API floor